A more precise initial message

--- a/resources/sql_output.html
+++ b/resources/sql_output.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src ##CSP_SOURCE##; style-src-attr 'unsafe-inline'; script-src ##CSP_SOURCE##;">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'none'; style-src ##CSP_SOURCE##; style-src-attr 'unsafe-inline'; script-src ##CSP_SOURCE##;">
   <link href="##CSS_URI##" rel="stylesheet">
   <script src="##JS_URI##" type="application/javascript"></script>
   <title>PRQL SQL Output Panel</title>
@@ -20,7 +21,7 @@
 </template>
 
 <body>
-  <div id="result">Loading...</div>
+  <div id="result">Loading and waiting for a PRQL file...</div>
 </body>
 
 </html>
