Display error messages below output if possible

--- a/resources/sql_output.html
+++ b/resources/sql_output.html
@@ -16,12 +16,13 @@
 </template>
 
 <template id="status-error">
-  <h2>Syntax error!</h2>
-  <pre></pre>
+  <pre id="last_html"></pre>
+  <hr>
+  <pre id="error_message"></pre>
 </template>
 
 <body>
-  <div id="result">Loading and waiting for a PRQL file...</div>
+  <div id="result">Waiting for a PRQL file...</div>
 </body>
 
 </html>
