Show the separator only if there's html above

--- a/resources/sql_output.html
+++ b/resources/sql_output.html
@@ -17,7 +17,7 @@
 
 <template id="status-error">
   <pre id="last_html"></pre>
-  <hr>
+  <hr id="separator">
   <pre id="error_message"></pre>
 </template>
 
