Make it more obvious there's an error

--- a/resources/sql_output.html
+++ b/resources/sql_output.html
@@ -18,6 +18,7 @@
 <template id="status-error">
   <pre id="last_html"></pre>
   <hr id="separator">
+  <h3>Syntax error!</h3>
   <pre id="error_message"></pre>
 </template>
 
