Reset the output on theme change

--- a/resources/sql_output.html
+++ b/resources/sql_output.html
@@ -22,6 +22,10 @@
   <pre id="error_message"></pre>
 </template>
 
+<template id="status-theme-changed">
+  <span>Theme has changed. Waiting for a PRQL file...</span>
+</template>
+
 <body>
   <div id="result">Waiting for a PRQL file...</div>
 </body>
