--- a/resources/sql-preview.html
+++ b/resources/sql-preview.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'none'; style-src ##CSP_SOURCE##; style-src-attr 'unsafe-inline'; script-src ##CSP_SOURCE##;"
+    <meta http-equiv="Content-Security-Policy"
+      content="default-src 'none';
+        style-src ##CSP_SOURCE##;
+        style-src-attr 'unsafe-inline';
+        script-src ##CSP_SOURCE##;"
     />
     <link href="##CSS_URI##" rel="stylesheet" />
     <script src="##JS_URI##" type="application/javascript"></script>
