finalize webview reload and rework compilation results display
- add new command field to all the webview messages
- finish wring refresh with storing of document url in view state for the view restore on vscode reload
- check if prql file exists prior to loading it in restored sql previews

--- a/resources/sql-preview.html
+++ b/resources/sql-preview.html
@@ -15,7 +15,7 @@
   </head>
 
   <template id="status-ok">
-    <div></div>
+    <div id="sql-code"></div>
   </template>
 
   <template id="status-error">
