tidy up margins and spacing in sql-preview.css

--- a/resources/sql-preview.html
+++ b/resources/sql-preview.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="result">Waiting for a PRQL file...</div>
-    <div class="error-inner">
+    <div class="error">
       <pre id="last-html"></pre>
       <div id="error-container">
         <pre id="error-message"></pre>
