--- a/resources/sql-preview.html
+++ b/resources/sql-preview.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy"
+    <meta
+      http-equiv="Content-Security-Policy"
       content="default-src 'none';
         style-src ##CSP_SOURCE##;
         style-src-attr 'unsafe-inline';
